--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "unix_network_programming_v1_in_rust"
+name = "rust"
 version = "0.1.0"
 authors = ["natumn <natsume.pcuse75@gmail.com>"]
 
